--- a/docs/courses/MA101.md
+++ b/docs/courses/MA101.md
@@ -4,14 +4,14 @@
 
 - 平时成绩：20%期中+20%小测（部分老师有mooc）+20%作业（包括签到）
 - 期末成绩：40%（8道填空+7道大题）
-# 微积分（甲）I——叶兴徳（5.0学分）
+## 微积分（甲）I——叶兴徳（5.0学分）
 - [期末历年卷（不含25年）](../files/微积分/微积分期末.pdf)
 
 叶老师授课方式别具一格，既有课程要点，也有他个人独自的见解，整体上与其他老师相比，讲授内容更深、更难。个人认为，如果高中数学底子不是很好，不建议来选叶老师的课。因为毕竟微积分是要面向考试学习的，如果你没有太多的时间放在微积分上，仅仅是去听叶老师深入讲解，那期中期末很可能爆炸（lz在鞭自己的尸）。反倒是不如去听矿爷或童姥姥讲，他们更加面向考试一些。
 
 对于给分这方面，叶老师是有签到分的，每学期5～6次，签一次给1分，满分5分。有两次是小测签，剩下的随机。平时分的话是一点不捞，尤其是期中考试——这是叶老师班被诟病已久的问题。因为期中考试是助教改自己班的，我依稀记得叶老师两个班期中平均分是73/76，别的班能到83左右，cjj的一个班甚至到了89（我真的不想再多说什么了）。然后小测的话是会调分的，但改动不是很大。
 
-# 微积分（甲）II——陈军杰（5.0学分）
+## 微积分（甲）II——陈军杰（5.0学分）
 - [25年期末填空](../files/微积分/25期末填空.JPG)
 
 我虽然选了陈老师的课，但除了小测之外我没去过教室，基本上都是自学，不懂的地方参考一下矿爷的mooc，所以陈老师讲课水平就不评价了。但是陈老师作业量还是蛮大的，基本上是课后题数量的2/3还要多。但也是个好事，做作业的同时把知识点巩固得更加扎实。同时czx和cx两位助教也非常给力，习题课我是一次没缺，两位助教总结重点讲解作业都非常到位，期中给分也是很好，我们班微II平均分都能过80。最后陈老师给分也是大捞特捞，推荐同学们选。
