--- a/docs/courses/MA102.md
+++ b/docs/courses/MA102.md
@@ -1,5 +1,5 @@
 线性代数（甲）是很多人最头疼的一门课。与线代乙相比，线代甲更加抽象，尤其是到了线性空间一部分，需要较强的理解。但实际上理解线性空间的本质之后，剩下的问题就迎刃而解了。
-# 线性代数（甲）——孙业顺（3.5学分）
+## 线性代数（甲）——孙业顺（3.5学分）
 - 成绩组成：10%mooc+20%小测+20%作业/签到+50%期末
 - [期末历年卷（不含25年）](../files/线性代数/线性代数期末.pdf)
 
