--- a/docs/courses/CS103.md
+++ b/docs/courses/CS103.md
@@ -1,5 +1,17 @@
-这门课的难度几乎全校皆知。去cls上你会看到惊掉下巴的专业课均绩。
-# 离散数学及其应用——赵永望（4.0学分）
-- 成绩组成：10%作业/签到+20%小测+20%期中+50%期末，期末可覆盖总评。
+## 离散数学及其应用——赵永望（4.0学分）
+- 成绩组成：10%作业/签到+20%小测+20%期中+50%期末（40分斩杀线），期末可覆盖总评（聊胜于无）。
+- quiz1:[zyw25](../files/离散数学及其应用/25quiz1_zyw.pdf),[llf24](../files/离散数学及其应用/24quiz1_llf.pdf),[llf23](../files/离散数学及其应用/23quiz1_llf.pdf)
+- midterm:[zyw25](../files/离散数学及其应用/25年zyw期中.pdf),[zyw24](../files/离散数学及其应用/zyw24年期中.pdf),[wyl25](../files/离散数学及其应用/25年wyl期中.pdf),[zyw](../files/离散数学及其应用/zyw期中.pdf)
+- quiz2:[zyw25](../files/离散数学及其应用/25年zyw%20quiz2.pdf)
+- final:[02-03](../files/离散数学及其应用/02-03期末.pdf),[02-03答案](../files/离散数学及其应用/离散期末1.pdf)[18-19DM](../files/离散数学及其应用/2018–2019%20学年春夏学期DM.pdf),[18-19](../files/离散数学及其应用/18-19期末.pdf),[19-20DM](../files/离散数学及其应用/19-20-discrte-math(no%20answer).pdf),[19-20](../files/离散数学及其应用/19-20期末.pdf)
+- 课后题答案:[奇数题](../files/离散数学及其应用/离散（奇数）.pdf)
 
-先说成绩组成。离散这门课拿分难的原因在于（1）小测和期中不赋分，导致平时分巨低
+这门课的难度几乎全校皆知。去cls上你会看到惊掉下巴的专业课均绩。离散这门课拿分难的原因在于
+
+1. 小测和期中不赋分，导致平时分巨低
+2. 期末考查内容广，考查程度深，考试题目难，24级还有了新特点：考试题量大。
+3. 全英文贯穿整个学习过程（老师授课除外。似乎只有wyl老师授课使用英文，剩下四位老师均为中文授课）
+
+zyw老师讲课水平一般，可以理解为念ppt。但其实除了wyl老师剩下的老师基本都是这样。但就给分而言，我认为wyl之后应该就是zyw了。这两年zyw老师的助教批改小测期中很是宽容，期末考试改的也是很宽松。另外，zyw小测和期中全是大题，带来的好处就是证明题好给分，所以大家平时分就会比较高。今年出分以后，钉钉群里好多谢谢老师。
+
+关于资料，期中小测都是每个班独立出题，zyw老师班每年都不一样，跟历年题基本上没有太大的关系。期末考试统一命题，但历年卷实在是太少，只有02-03和18-19两年的卷子。但据zyw老师描述，25年卷子（98上有回忆卷）跟现存的两年历年卷重合度很高（lz没感觉到bushi）
